--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+BeautifulSoup==3.2.1
 Django==1.5.2
-BeautifulSoup4 ==4.3.1
 argparse==1.2.1
+beautifulsoup4==4.3.1
 dj-database-url==0.2.2
 dj-static==0.0.5
+django-cors-headers==0.12
 django-toolbelt==0.0.1
+djangorestframework==2.3.8
 gunicorn==17.5
 psycopg2==2.5.1
 static==0.4
 wsgiref==0.1.2
+yolk==0.4.3
