--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,53 @@
 BeautifulSoup==3.2.1
-Django==1.5.2
+Mako==0.7.3
+MarkupSafe==0.15
+NINJA-IDE==2.3
+PAM==0.4.2
+Pillow==2.0.0
+Twisted-Core==12.3.0
+Twisted-Names==12.3.0
+Twisted-Web==12.3.0
+apt-xapian-index==0.45
+aptoncd==0.1.98-bzr117-1.2
+apturl==0.4.1ubuntu4
 argparse==1.2.1
-beautifulsoup4==4.3.1
-dj-database-url==0.2.2
-dj-static==0.0.5
-django-cors-headers==0.12
-django-toolbelt==0.0.1
-djangorestframework==2.3.8
-gunicorn==17.5
-psycopg2==2.5.1
-static==0.4
+chardet==2.0.1
+configglue==1.0
+debtagshw==0.1
+defer==1.0.6
+dirspec==4.2.0
+distribute==0.6.34
+duplicity==0.6.21
+feedparser==5.1.2
+httplib2==0.7.7
+jockey==0.9.7
+lesscpy==0.9j
+lxml==3.1.0
+oauthlib==0.3.7
+oneconf==0.3.3
+paramiko==1.7.7.1
+pexpect==2.4
+piston-mini-client==0.7.5
+protobuf==2.4.1
+pyOpenSSL==0.13
+pycrypto==2.6
+pycups==1.9.62
+pycurl==7.19.0
+pygobject==3.8.0
+pygpgme==0.3
+pyinotify==0.9.3
+pyserial==2.6
+pysmbc==1.0.13
+python-apt==0.8.8ubuntu6
+python-debian==0.1.21-nmu2ubuntu1
+pyxdg==0.25
+reportlab==2.6
+sessioninstaller==0.0.0
+six==1.2.0
+system-service==0.1.6
+uTidylib==0.2
+vboxapi==1.0
+virtualenv==1.10.1
 wsgiref==0.1.2
-yolk==0.4.3
+xkit==0.0.0
+zope.interface==4.0.5
